--- a/templates/html/login.html
+++ b/templates/html/login.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <meta name="renderer" content="webkit">
         <title>Enter Couple - 登录</title>
-        <link rel="icon" href="../static/img/favicon.png">
-        <link rel="stylesheet" type="text/css" href="../static/css/font.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/animations.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
-        <script src="../static/js/common.js"></script>
-        <script src="../static/js/login.js"></script>
+        <link rel="icon" href="/static/img/favicon.png">
+        <link rel="stylesheet" type="text/css" href="/static/css/font.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/animations.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+        <script src="/static/js/common.js"></script>
+        <script src="/static/js/login.js"></script>
     </head>
     <body>
         <div class="frame">
@@ -25,7 +25,7 @@
                     <path value="login-btn" d="M97.5,328h173c9.6,0,17.5,7.9,17.5,17.5v0c0,9.6-7.9,17.5-17.5,17.5h-173 c-9.6,0-17.5-7.9-17.5-17.5v0C80,335.9,87.9,328,97.5,328z"/>
                 </svg>
                 <a class="logo" href="">
-                    <embed type="image/svg+xml" src="../static/img/icon-c.svg" >
+                    <embed type="image/svg+xml" src="/static/img/icon-c.svg" >
                 </a>
                 <label class="zone-name">Enter Couple</label>
                 <form class="login-form">
